RESOLVED FIXED307099
subtitles stop rendering after entering/exiting PIP on apple.com
https://bugs.webkit.org/show_bug.cgi?id=307099
Summary subtitles stop rendering after entering/exiting PIP on apple.com
Dana Estra
Reported 2026-02-05 12:50:16 PST
subtitles stop rendering after entering/exiting PIP on apple.com
Attachments
Dana Estra
Comment 1 2026-02-05 12:50:17 PST
Dana Estra
Comment 2 2026-02-05 13:41:26 PST
EWS
Comment 3 2026-02-09 09:50:40 PST
Committed 307084@main (bb389b9c4ae0): <https://commits.webkit.org/307084@main> Reviewed commits have been landed. Closing PR #57995 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.