Source/WebCore/page/QuirksData.h
@@ -60,6 +60,7 @@ struct QuirksData {
         BlocksEnteringStandardFullscreenFromPictureInPictureQuirk,
         BlocksReturnToFullscreenFromPictureInPictureQuirk,
 #endif
+        EnsureCaptionVisibilityInFullscreenAndPictureInPicture,
         HasBrokenEncryptedMediaAPISupportQuirk,
         ImplicitMuteWhenVolumeSetToZero,
         InputMethodUsesCorrectKeyEventOrder,
